Fix issue #0000295 Fix authoring layout issue
git-svn-id: http://vcs.taotesting.com/svn/oat/projects/tao/trunk@2825 62dfeb86-a93f-4914-9d13-15c0a160985d

--- a/views/css/layout.css
+++ b/views/css/layout.css
@@ -375,7 +375,7 @@ span.ui-state-default img{
 div#authoring-container{
 	left:0px;
 	width:100%;
-	height:100%;
+	height:580px;
 }
 div.ext-home-container{
 	padding:1%;
